fix: :lipstick: Change z-index of <CelebrityRequestForm /> y <CookiesConsent /> to prevent overlapping over <NewsletterPopup />

--- a/react-app/src/components/containers/celebrity-request-form/styles.scss
+++ b/react-app/src/components/containers/celebrity-request-form/styles.scss
@@ -1,4 +1,4 @@
-.CelebrityRequestForm{
+.CelebrityRequestForm {
   max-width: 500px;
   padding: 20px;
   margin: 20px auto 0;
@@ -8,13 +8,12 @@
     input {
       border-radius: 0 0.25rem 0.25rem 0;
       width: 100%;
-      z-index: 1000;
+      z-index: 10;
     }
   }
 
-
   button:disabled,
-  button[disabled]{
+  button[disabled] {
     opacity: 0.2;
     cursor: not-allowed;
   }
